--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ title: Blog
 permalink: /blog.html
 ---
 
-<!-- {% if page.url == "/" %} -->
+{% if page.url !== "/" %} 
 
 <!-- Featured
 ================================================== -->
