--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@ permalink: /blog.html
     </div>
 </section>
 
-<!-- {% endif %} -->
+{% endif %}
 
 <!-- Posts Index
 ================================================== -->
