--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ title: Blog
 permalink: /blog.html
 ---
 
-{% if page.url == "/blog.html" %}
+<!-- {% if page.url == "/blog.html" %} -->
 
 <!-- Featured
 ================================================== -->
@@ -27,7 +27,7 @@ permalink: /blog.html
     </div>
 </section>
 
-{% endif %}
+<!-- {% endif %} -->
 
 <!-- Posts Index
 ================================================== -->
