--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
   <div class="pl-4 pr-0 h-100 tofront">
     <div class="row justify-content-between">
       <div class="col-md-6 pt-6 pb-6 pr-lg-4 align-self-center">
-        <h1 class="font-weight-bold mb-4 serif-font">Improving healthcare through technology</h1>
+        <h1 class="font-weight-bold mb-4 serif-font">Sandy Su</h1>
         <p class="lead mb-4">Data strategist and cloud architect.  Specialized in advanced analytics and AI solutions for Healthcare & Life Sciences</p>
           <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
       </div>
