--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
     <div class="row justify-content-between">
       <div class="col-md-6 pt-6 pb-6 pr-lg-4 align-self-center">
         <h1 class="font-weight-bold mb-4 serif-font">Sandy Su</h1>
-        <p class="lead mb-4">I'm a data strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI strategy and technologies to improve healthcare delivery.</p>
+        <p class="lead mb-4">I'm a data strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI strategy and technologies.</p>
           <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
       </div>
       <!--
