--- a/index.html
+++ b/index.html
@@ -22,11 +22,20 @@ layout: default
 </div>
 -->
 
+
+<!--
+    <h1 class="sitetitle">{{ site.name }}</h1>
+    <p class="lead">
+        {{ }}
+    </p>
+-->
+
 <div class="jumbotron jumbotron-fluid jumbotron-home pt-0 pb-0 mt-3 mb-2rem bg-lightblue position-relative">
   <div class="pl-4 pr-0 h-100 tofront">
     <div class="row justify-content-between">
       <div class="col-md-6 pt-6 pb-6 pr-lg-4 align-self-center">
-        <h1 class="font-weight-bold mb-4 serif-font">Sandy Su</h1>
+<!--    <h1 class="font-weight-bold mb-4 serif-font">Sandy Su</h1>  -->
+        <h1 class="sitetitle">Sandy Su</h1>
         <p class="lead mb-4">I'm a data strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions and technologies.</p>
           <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
       </div>
