--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@ layout: default
   <div class="pl-4 pr-0 h-100 tofront">
     <div class="row justify-content-between">
       <div class="col-md-6 pt-6 pb-6 pr-lg-4 align-self-center">
-<!--    <h1 class="font-weight-bold mb-4 serif-font">Sandy Su</h1>  -->
-        <h1 class="sitetitle">Sandy Su</h1>
+      <h1 class="font-weight-bold mb-4 serif-font">Sandy Su</h1>
+<!--        <h1 class="sitetitle">Sandy Su</h1> -->
         <p class="lead mb-4">I'm a data strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions and technologies.</p>
           <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
-        <br>
-          {% include contact.html %}
         </div>
       <!--
         <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url({{site.baseurl}}/assets/images/intro.svg)">	
@@ -44,6 +42,21 @@ layout: default
   </div>
 </div>
 {% endif %}
+
+<!-- Flexible Jekyll Theme
+<aside class="sidebar">
+  <header>
+    <div class="about">
+      <div class="cover-author-image">
+        <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
+      </div>
+      <div class="author-name">{{site.author}}</div>
+      <p>{{site.about-author}}</p>
+    </div>
+  </header> 
+-->
+
+
 
 <!-- Mediator Theme
 <div class="teaserimage">
