--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ layout: default
   <div class="pl-4 pr-0 h-100 tofront">
     <div class="row justify-content-between">
       <div class="col-md-6 pt-6 pb-6 pr-lg-4 align-self-center">
-      <h1 class="font-weight-bold mb-4 serif-font">Sandy Su</h1>
+      <h1 class="font-weight-bold mb-4 serif-font">Welcome</h1>
 <!--        <h1 class="sitetitle">Sandy Su</h1> -->
-        <p class="lead mb-4">I'm a data strategist and cloud architect, focused on advanced analytics and AI solutions.  I specialize in the Healthcare & Life Sciences industry, using information technology to improve healthcare delivery.</p>
+        <p class="lead mb-4">Hi, I'm Sandy.  I'm a data strategist and cloud architect, focused on advanced analytics and AI solutions.  I specialize in the Healthcare & Life Sciences industry, using technology to improve healthcare delivery.</p>
           <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
         </div>
       <!--
