--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
       <div class="col-md-6 pt-6 pb-6 pr-lg-4 align-self-center">
       <h1 class="font-weight-bold mb-4 serif-font">Welcome</h1>
 <!--        <h1 class="sitetitle">Sandy Su</h1> -->
-        <p class="lead mb-4">Hi, I'm Sandy.  I'm a data strategist and cloud architect, focused on advanced analytics and AI solutions.  I specialize in the Healthcare & Life Sciences industry, using technology to improve healthcare delivery.</p>
+        <p class="lead mb-4">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on advanced analytics and AI solutions.  I specialize in the Healthcare & Life Sciences industry, using technology to improve healthcare delivery.</p>
           <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
         </div>
       <!--
