--- a/index.html
+++ b/index.html
@@ -20,16 +20,21 @@ layout: default
   </header> 
 -->
 
+<!--
+<img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
+-->                                             
 
-<!-- Jumbotron - revised - add as background?
+
+<!-- Jumbotron - revised - add as background? -->
 <div class="jumbotron fortags">
 	<div class="d-md-flex h-100">
 		<div class="col-md-4 transpdark align-self-center text-center h-100">
             <div class="d-md-flex align-items-center justify-content-center h-100">
-                <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2>
+<!--              <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2> -->
+                  <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
             </div>
 		</div>
-		<div class="col-md-8 p-5 align-self-center text-center">
+<!--		<div class="col-md-8 p-5 align-self-center text-center">
             {% assign categories_list = site.categories %}
             {% if categories_list.first[0] == null %}
                 {% for category in categories_list %}
@@ -41,10 +46,10 @@ layout: default
                 {% endfor %}
             {% endif %}
             {% assign categories_list = nil %}
-		</div>
+		</div> 
+-->
 	</div>
 </div>
--->
 
 
 
