--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
             <div class="d-md-flex align-items-center justify-content-center h-100">
 <!--              <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2> -->
 <!--              <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">  -->
-                  <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ sandy.gravatar }}?s=250&d=mm&r=x">
+                  <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ sandy.gravatar }}?s=250&d=mm&r=x" alt="{{ sandy.display_name }}">
             </div>
 		</div>
 <!--		<div class="col-md-8 p-5 align-self-center text-center">
