--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ layout: default
 -->
 
 
-<!-- Mundana Theme Jekyll - revised
+<!-- Mundana Theme Jekyll - revised and compiled successfully
 <div class="jumbotron jumbotron-fluid jumbotron-home pt-0 pb-0 mt-3 mb-2rem bg-lightblue position-relative">
   <div class="pl-4 pr-0 h-100 tofront">
     <div class="row justify-content-between">
@@ -150,4 +150,3 @@ layout: default
 
 
 {% endif %}
-{% endfor %}
