--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <!-- Home Intro
 ================================================== -->
-{% if page.url == "/" %} 
+<!-- {% if page.url == "/" %} -->
 
 <!-- Jumbotron - revised - add as background? -->
 <div class="jumbotron fortags">
