--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 		</div>
 	</div>
 </div>
-{% endif %}
+<!-- {% endif %} -->
 
 <!-- Mundana Theme Jekyll - revised and compiled successfully
 <div class="jumbotron jumbotron-fluid jumbotron-home pt-0 pb-0 mt-3 mb-2rem bg-lightblue position-relative">
