--- a/index_hasproblems.html
+++ b/index_hasproblems.html
@@ -39,7 +39,7 @@ layout: default
 	</div>
 </div>
 
-
+<!-- {% endif %} -->
 
 
 
@@ -147,6 +147,3 @@ layout: default
 </div>
 {% endif %}
 -->
-
-
-{% endif %}
