--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@ layout: default
 		<div class="col-md-4 transpdark align-self-center text-center h-100">
       		<div class="d-md-flex align-items-center justify-content-center h-100">
     	<!--   	<h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2> -->
-				<img class="author-thumb" src="{{site.baseurl}}/assets/images/1.jpg">  	
+		<!--	<img class="author-thumb" src="{{site.baseurl}}/assets/images/1.jpg">  -->
+					<div class="cover-author-image">
+	  					<img src="{{site.baseurl}}/assets/imgages/1.jpg">
+					</div>	
 			</div>
 		</div>
 	</div>
 </div>
+
+
+<!--
+	<div class="about">
+	<div class="cover-author-image">
+	  <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
+	</div>
+-->
