--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
     	<!--   	<h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2> -->
 		<!--	<img class="author-thumb" src="{{site.baseurl}}/assets/images/1.jpg">  -->
 					<div class="cover-author-image">
-	  					<img src="{{site.baseurl}}/assets/imgages/1.jpg">
+	  					<img src="{{site.baseurl}}/assets/images/1.jpg">
 					</div>	
 			</div>
 		</div>
