--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
 					</div>	
 			</div>
 			<div class="col-md-8 p-5 align-self-center text-center">
-				<h2 class="d-md-block align-self-center py-1 font-weight-light">Welcome<span class="d-none d-md-inline">→</span></h2>
+				<h2 class="d-md-block align-self-center py-1 font-weight-light">Welome<span class="d-none d-md-inline">→</span></h2>
 			</div> 
 		</div>
 	</div>
