--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@ layout: default
 	  					<img src="{{site.baseurl}}/assets/images/1.jpg">
 					</div>	
 			</div>
-			<div class="col-md-8 p-5 align-self-center text-center">
+<!--			<div class="col-md-8 p-5 align-self-center text-center">
 				<h2 class="d-md-block align-self-center py-1 font-weight-light">Welcome<span class="d-none d-md-inline">→</span></h2>
+-->			
 			</div> 
 		</div>
 	</div>
