--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
 ================================================== -->
 
 <!-- Header -->
+<!-- <body id="page-top" class="index"> -->
 <body id="page-top" class="index"></body>
 <header>
     <div class="container">
