--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <!-- Header -->
 <!-- <body id="page-top" class="index"> -->
-<body id="page-top" class="index"></body>
+<body id="page-top">
 <header>
     <div class="container">
       <div class="row">
