--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 <!-- Header -->
 <!-- <body id="page-top" class="index"> -->
 <body id="page-top">
-<header>
+<!-- <header>   -->
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -22,5 +22,5 @@ layout: default
         </div>
       </div>
     </div>
-  </header>
+<!-- </header>  -->
 </body>
