--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@ layout: default
 <!-- Header -->
 <!-- <body id="page-top" class="index"> -->
 <body id="page-top">
-<!-- <header>   -->
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
+            <div class="cover-author-image">
+                <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
+            </div>
           <div class="intro-text">
             <span class="name">{{ site.title }}</span>
             <hr class="star-light" />
@@ -22,5 +23,4 @@ layout: default
         </div>
       </div>
     </div>
-<!-- </header>  -->
 </body>
