--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 <body id="page-top">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 transpdark">
             <div class="cover-author-image">
                 <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
             </div>
