--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ layout: default
 
 <!-- Header -->
 <!-- <body id="page-top" class="index"> -->
-<body id="page-top">
+<!--
+    <body id="page-top">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 transpdark">
@@ -24,3 +25,18 @@ layout: default
       </div>
     </div>
 </body>
+-->
+
+<!---->
+<!-- Jumbotron - revised - add as background? -->
+<div class="d-md-flex h-100">
+	<div class="col-lg-4 transpdark align-self-center text-center h-100">
+      	<div class="d-md-flex align-items-center justify-content-center h-100">
+<!--        <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2> -->
+<!--        <img class="author-thumb" src="{{site.baseurl}}/assets/images/1.jpg">  -->
+			<div class="cover-author-image">
+                <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
+			</div>	
+		</div>
+	</div>
+</div>
