--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 <!---->
 <!-- Jumbotron - revised - add as background? -->
 <div class="d-md-flex h-100">
-	<div class="col-lg-4 transpdark align-self-center text-center h-100">
+	<div class="col-md-12 transpdark align-self-center text-center h-100">
       	<div class="d-md-flex align-items-center justify-content-center h-100">
 <!--        <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2> -->
 <!--        <img class="author-thumb" src="{{site.baseurl}}/assets/images/1.jpg">  -->
