--- a/index.html
+++ b/index.html
@@ -6,37 +6,16 @@ layout: default
 <!-- Home Intro
 ================================================== -->
 
-<!-- Header -->
-<!-- <body id="page-top" class="index"> -->
-<!--
-    <body id="page-top">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 transpdark">
-            <div class="cover-author-image">
-                <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
-            </div>
-          <div class="intro-text">
-            <span class="name">{{ site.title }}</span>
-            <hr class="star-light" />
-            <span class="skills">{{ site.name }}</span>
-          </div>
-        </div>
-      </div>
-    </div>
-</body>
--->
 
-<!---->
-<!-- Jumbotron - revised - add as background? -->
-<div class="d-md-flex h-100">
-	<div class="col-md-12 transpdark align-self-center text-center h-100">
-      	<div class="d-md-flex align-items-center justify-content-center h-100">
-<!--        <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2> -->
-<!--        <img class="author-thumb" src="{{site.baseurl}}/assets/images/1.jpg">  -->
-			<div class="cover-author-image">
-                <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
-			</div>	
+<!-- Categories Jumbotron
+================================================== -->
+
+<div class="jumbotron fortags">
+	<div class="d-md-flex h-100">
+		<div class="col-md-4 transpdark align-self-center text-center h-100">
+            <div class="d-md-flex align-items-center justify-content-center h-100">
+                <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2>
+            </div>
 		</div>
 	</div>
 </div>
