--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
 <!-- Categories Jumbotron
 ================================================== -->
-
+<body id="page-top">
 <div class="jumbotron fortags">
 	<div class="d-md-flex h-100">
 		<div class="col-md-4 transpdark align-self-center text-center h-100">
@@ -19,3 +19,4 @@ layout: default
 		</div>
 	</div>
 </div>
+</body>
