--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ layout: default
         <div class="col-md-4 transpdark align-self-center text-center h-100">
             <div class="d-md-flex align-items-center justify-content-center h-100">
                 <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2>
+                <div class="cover-author-image">
+                    <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
+                </div>    
             </div>
         </div>
     </div>
