--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@ layout: default
             <div class="d-md-flex align-items-center justify-content-center h-100">
 <!--           <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2>
 --> 
-               <h2 class="d-md-block align-self-center py-1"></h2>
-
                <div class="cover-author-image">
                     <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
                 </div>    
             </div>
         </div>
     </div>
-</div>
+</div
