--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 <!--           <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2>
 --> 
                <div class="cover-author-image">
-                    <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
+                    <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-left" alt="profile-pic" />
                 </div>    
             </div>
         </div>
