--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@ layout: default
 
 <div class="container">
     <div class="row">
-      <div class="col-4">
-        <img class="mx-auto d-block" src="{{site.baseurl}}/assets/images/sandy.png" alt="Centered Image">
-      </div>
+        <div class="col-4">
+            <div class="cover-author-image">
+                <img class="mx-auto d-block" src="{{site.baseurl}}/assets/images/sandy.png" alt="Centered Image">
+            </div> 
+        </div>
     </div>
 </div>
   
