--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
 
 <div class="container">
     <div class="row">
-        <div class="col-4">
+        <div class="col-4 transpdark">
             <div class="cover-author-image">
                 <img class="mx-auto d-block" src="{{site.baseurl}}/assets/images/sandy.png" alt="Centered Image">
             </div> 
