--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
         <div class="col-md-4 align-self-center text-center h-100">
             <div class="d-md-flex align-items-center justify-content-center h-100">
 <!--           <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore<span class="d-none d-md-inline">→</span></h2>    -->
-               <div class="cover-author-image pl-6">
+               <div class="pl-6 cover-author-image">
                     <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-left" alt="profile-pic" />
                 </div>    
             </div>
