--- a/index.html
+++ b/index.html
@@ -5,23 +5,37 @@ layout: default
 
 <!-- Home Intro
 ================================================== -->
+<!-- Test-->
+<div class="container">
+    <h1>About Me</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <img style="float: left; width: 200px; height: 200px; margin-right: 10px;" src="{{site.baseurl}}/assets/images/sandy.png" alt="My Photo">
+            <p>Lots of text here...</p>
+            <!-- Rest of your content -->
+        </div>
+    </div>
+</div>
+
+
 
 
 <!-- Categories Jumbotron
 ================================================== -->
 
+<!--
 <div class="jumbotron fortags">
     <div class="d-md-flex h-100">
-        <div class="col-md-4 align-self-center text-center h-100 ps-5">
+        <div class="col-md-4 align-self-center text-center h-100">
             <div class="d-md-flex align-items-center justify-content-center h-100">
-<!--           <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore<span class="d-none d-md-inline">→</span></h2>    -->
-               <div class="cover-author-image">
+              <div class="cover-author-image">
                     <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-left" alt="profile-pic" />
                 </div>    
             </div>
         </div>
     </div>
 </div>
+-->
 
 <!--
 <div class="jumbotron fortags">
