--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <h1>About Me</h1>
     <div class="row">
         <div class="col-md-12">
-            <img style="float: left; width: 200px; height: 200px; margin-right: 10px;" src="{{site.baseurl}}/assets/images/sandy.png" alt="My Photo">
+            <img style="float: right; width: 200px; height: 200px; margin-right: 10px;" src="{{site.baseurl}}/assets/images/sandy.png" alt="My Photo">
             <p>Lots of text here...</p>
             <!-- Rest of your content -->
         </div>
