--- a/index.html
+++ b/index.html
@@ -5,18 +5,33 @@ layout: default
 
 <!-- Home Intro
 ================================================== -->
+<div class="flex">
+    <div>One</div>
+    <div>Two</div>
+    <div>Three
+      <br>has
+      <br>extra
+      <br>text
+    </div>
+  </div>
+
+
+
+
+
 <!-- Test-->
+<!--
 <div class="container">
     <h1>About Me</h1>
     <div class="row">
         <div class="col-md-12">
             <img style="float: left; width: 200px; height: 200px; margin-right: 10px;" src="{{site.baseurl}}/assets/images/sandy.png" alt="My Photo">
-            <p>Lots of text here...</p>
+            <p>Lots of text here...</p> -->
             <!-- Rest of your content -->
-        </div>
+        <!-- </div>
     </div>
 </div>
-
+-->
 
 
 
