--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <!-- Home Intro
 ================================================== -->
-<div class="d-md-flex h-100">
+<div class="d-md-flex border: 1px h-100">
     <div>One</div>
     <div>Two</div>
     <div>Three
