--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <!-- Home Intro
 ================================================== -->
-<div class="bo">
+<div class="box">
     <div>One</div>
     <div>Two</div>
     <div>Three
@@ -13,7 +13,7 @@ layout: default
       <br>extra
       <br>text
     </div>
-  </div>
+</div>
 
 
 
