--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
   background-color: DodgerBlue;
 }
 
-.flex-container > div {
+.flex-container .div {
   background-color: #f1f1f1;
   margin: 10px;
   padding: 20px;
