--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ layout: default
   <div>1</div>
   <div>2</div>
   <div>3</div>  
+  <div>4</div> 
 </div>
 
 <p>A Flexible Layout must have a parent element with the <em>display</em> property set to <em>flex</em>.</p>
