--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@ layout: default
 <h1>Create a Flex Container</h1>
 
 <div class="flex-container">
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>  
-  <div>4</div> 
+    <div style="flex-grow: 1">1</div>
+    <div style="flex-grow: 1">2</div>
+    <div style="flex-grow: 8">3</div>
 </div>
 
 <p>A Flexible Layout must have a parent element with the <em>display</em> property set to <em>flex</em>.</p>
