--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ layout: default
 .flex-container > div {
   background-color: #f1f1f1;
   margin: 10px;
-  padding: 100px;
+  padding: 10px;
+  text-align: center;
+  line-height: 75px;
   font-size: 30px;
 }
 </style>
