--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
 .flex-container > div {
   background-color: #f1f1f1;
   margin: 10px;
-  padding: 50px;
+  padding: 100px;
   text-align: center;
   line-height: 75px;
   font-size: 30px;
@@ -29,7 +29,11 @@ layout: default
 
 <div class="flex-container">
     <div style="flex-grow: 1">1</div>
-    <div style="flex-grow: 1">2</div>
+    <div style="flex-grow: 1">
+        <div class="cover-author-image">
+            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
+        </div>
+    </div>   
     <div style="flex-grow: 10">3</div>
 </div>
 
