--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
         </div>
     </div>   
-    <div style="flex-grow: 10">3</div>
+    <div style="flex-grow: 10">Welcom</div>
 </div>
 
 <p>A Flexible Layout must have a parent element with the <em>display</em> property set to <em>flex</em>.</p>
