--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@ layout: default
     <div style="flex-grow: 0">1</div>
     <div style="flex-grow: 1">
         <div class="cover-author-image">
-            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
-        </div>
+<!--            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
+-->
+                <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
+</div>
     </div>   
     <div style="flex-grow: 10">Welcom</div>
 </div>
