--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@ layout: default
 
 <div class="flex-container">
     <div style="flex-grow: 0">1</div>
-    <div style="flex-grow: 1">
+    <div style="flex-grow: 1">Welce</div>
+    div style="flex-grow: 10">
         <div class="cover-author-image">
 <!--            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
 -->
                 <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
-</div>
-    </div>   
-    <div style="flex-grow: 10">Welcom</div>
+        </div>
+
 </div>
 
 <p>A Flexible Layout must have a parent element with the <em>display</em> property set to <em>flex</em>.</p>
