--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 <div class="flex-container">
     <div style="flex-grow: 0">1</div>
     <div style="flex-grow: 1">Welce</div>
-    div style="flex-grow: 10">
+    <div style="flex-grow: 10">
         <div class="cover-author-image">
 <!--            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
 -->
