--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
 -->
                 <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
         </div>
-
+    </div>
 </div>
 
 <p>A Flexible Layout must have a parent element with the <em>display</em> property set to <em>flex</em>.</p>
