--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@ layout: default
 
 <div class="flex-container">
     <div style="flex-grow: 0">1</div>
-    <div style="flex-grow: 5">Welce</div>
-    <div style="flex-grow: 5">
+    <div style="flex-grow: 1">
         <div class="cover-author-image">
-<!--            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
--->
-                <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
+        <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
+        -->
+            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
         </div>
+    <div style="flex-grow: 5">Welcome</div>
     </div>
 </div>
 
