--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ layout: default
         -->
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
         </div>
+    </div>
     <div style="flex-grow: 5">Welcome</div>
     </div>
 </div>
