--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
         </div>
     </div>
-    <div style="flex-grow: 15">Welcome my name is Sandy</div>
+    <div style="flex-grow: 25">Welcome my name is Sandy Su</div>
     </div>
 </div>
 
