--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@ layout: default
 
 <div class="flex-container">
 <!--    <div style="flex-grow: 0">1</div>    -->
-    <div style="flex-grow: 5">
+    <div style="flex-grow: 10">
         <div class="cover-author-image">
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
         -->
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
         </div>
     </div>
-    <div style="flex-grow: 15">Welcome my name is Sandy Su.  HOlas.</div>
+    <div style="flex-grow: 10">Welcome my name is Sandy Su.  HOlasl.</div>
     </div>
 </div>
 
