--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
         <div class="cover-author-image">
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
         -->
-            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
+            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-right" alt="profile-pic" />
         </div>
     </div>
     <div style="flex-grow: 10">Welcome my name is Sandy Su.  HOlasl.</div>
