--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@ layout: default
 <h1>Create a Flex Container</h1>
 
 <div class="flex-container">
-<!--    <div style="flex-grow: 0">1</div>    -->
-    <div style="flex-grow: 10">
+    <div style="flex-grow: 0">1</div>
+    <div style="flex-grow: 2">
         <div class="cover-author-image">
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
         -->
-            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-right" alt="profile-pic" />
+            <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
         </div>
     </div>
-    <div style="flex-grow: 10">Welcome my name is Sandy Su.  HOlasl.</div>
+    <div style="flex-grow: 10">Welcome my name is Sandy Su.  HOlasld.</div>
     </div>
 </div>
 
