--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@ layout: default
 
 <!-- Home Intro
 ================================================== -->
+
+<div class="d-flex">
+    <div class="col-md-6">Column 1</div>
+    <div class="col-md-6">Column 2</div>
+  </div>
+
+
+<!--
 <head>
 <style>
 .flex-container {
@@ -48,7 +56,7 @@ layout: default
 <p>Direct child elements(s) of the flexible container automatically becomes flexible items.</p>
 
 </body>
-
+-->
 
 <!--
 <div class="box">
