--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@ layout: default
 <div class="flex-container">
     <div style="flex-grow: 0">1</div>
     <div style="flex-grow: 2">
-        <div class="cover-author-image">
+        <div class="cover-author-image"> -->
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
         -->
+        <!--
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
         </div>
     </div>
