--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <!-- Home Intro
 ================================================== -->
 
-<div class="d-flex">
+<div class="d-flex background-color DodgerBlue">
     <div class="col-md-6">Column 1</div>
     <div class="col-md-6">Column 2</div>
 </div>
