--- a/index2.html
+++ b/index2.html
@@ -6,11 +6,12 @@ layout: default
 <!-- Home Intro
 ================================================== -->
 
+<!--
 <div class="d-flex">
     <div class="col-md-6">Column 1</div>
     <div class="col-md-6">Column 2</div>
-  </div>
-
+</div>
+-->
 
 <!---->
 <head>
@@ -36,9 +37,9 @@ layout: default
 <h1>Create a Flex Container</h1>
 
 <div class="flex-container">
-    <div style="flex-grow: 0">1</div>
-    <div style="flex-grow: 2">
-        <div class="cover-author-image">
+    <div class="col-md-6"></div>
+<!--    <div style="flex-grow: 2">
+        <div class="cover-author-image"> -->
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
         -->
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
@@ -50,6 +51,7 @@ layout: default
     </div>
     </div>
 </div>
+-->
 
 <p>A Flexible Layout must have a parent element with the <em>display</em> property set to <em>flex</em>.</p>
 
