--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ layout: default
 
 <div class="flex-container">
     <div class="col-md-4"></div>
-<!--    <div style="flex-grow: 2">
-        <div class="cover-author-image"> -->
+<!--    <div style="flex-grow: 2">  -->
+        <div class="cover-author-image">
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
         -->
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic" />
