--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
 <h1>Create a Flex Container</h1>
 
 <div class="flex-container">
-    <div class="col-lg-4"></div>
+    <div class="col-md-4"></div>
 <!--    <div style="flex-grow: 2">  -->
         <div class="cover-author-image">
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
@@ -51,7 +51,6 @@ layout: default
     </div>
     </div>
 </div>
--->
 
 <p>A Flexible Layout must have a parent element with the <em>display</em> property set to <em>flex</em>.</p>
 
