--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 
 <body>
 
-<h1>Create a Flex Container</h1>
+<h1>Create a Flex Contaier</h1>
 
 <div class="flex-container">
     <div class="col-md-4"></div>
