--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
 <h1>Create a Flex Container</h1>
 
 <div class="flex-container">
-    <div class="col-md-4"></div>
+    <div class="col-md-4">
 <!--    <div style="flex-grow: 2">  -->
         <div class="cover-author-image">
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
@@ -46,7 +46,7 @@ layout: default
         </div>
     </div>
 <!--<div style="flex-grow: 10">  -->
-    <div class="col-md-4"></div>
+    <div class="col-md-4">
         <h1 class="font-weight-bold mb-4 serif-font">Improving healthcare through technology</h1>
         <p class="lead mb-4">My name is Sandy, and I'm here to share with you my knowledge and experience of over 10 years of monetizing my blog.</p>
     </div>
