--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
   margin: 10px;
   padding: 50px;
   text-align: center;
-  line-height: 50px;
+  line-height: 75px;
   font-size: 30px;
 }
 </style>
@@ -48,7 +48,7 @@ layout: default
 <!--<div style="flex-grow: 10">  -->
     <div class="col-md-4">
         <h1 class="font-weight-bold mb-4 serif-font">Improving healthcare through technology</h1>
-        <p class="lead mb-4">My name is Sandy, and I'm here to share with you my knowledge and experience of over 10 years of monetizing my blog.</p>
+<!--        <p class="lead mb-4">My name is Sandy, and I'm here to share with you my knowledge and experience of over 10 years of monetizing my blog.</p>  -->
     </div>
     </div>
 </div>
