--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ layout: default
 <h1>Create a Flex Container</h1>
 
 <div class="flex-container">
+    <div style="flex-grow: 0">1</div>
     <div class="col-md-4">
-<!--    <div style="flex-grow: 2">  -->
         <div class="cover-author-image">
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
         -->
