--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@ layout: default
 
 <h1>Create a Flex Container</h1>
 
+<!--
 <div class="flex-container">
+-->
+<div class="d-md-flex h-100">
     <div class="col-md-4">
         <div class="cover-author-image">
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
