--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
 <!--
 <div class="flex-container">
 -->
-<div class="d-md-flex h-100">
+<div class="d-md-flex bg-primary h-100">
     <div class="col-md-4">
         <div class="cover-author-image">
         <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
