--- a/index.html
+++ b/index.html
@@ -40,18 +40,17 @@ layout: default
 <div class="flex-container">
 -->
 <div class="d-md-flex bg-primary p-5 h-100">
-    <div class="col-md-1 bg-info"></div>
+<!--<div class="col-md-1 bg-info"></div> -->
     <div class="col-md-4 bg-warning">
         <div class="cover-author-image">
-        <!--<img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" class="float-center" alt="profile-pic" />
-        -->
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
         </div>
     </div>
 <!--<div style="flex-grow: 10">  -->
     <div class="col-md-8 bg-info">
-        <h1 class="font-weight-bold mb-4 serif-font">Welcome</h1>
-        <p class="lead">My name is Sandy, and I'm here to share with you my knowledge and experience of over 10 years of monetizing my blog.</p>
+        <h1 class="font-weight-bold mb-2 serif-font">Welcome</h1>
+        <p class="lead mb-2">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on advanced analytics and AI solutions.  I specialize in the Healthcare & Life Sciences industry, using technology to improve healthcare delivery.</p>
+        <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
     </div>
     </div>
 </div>
