--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@ layout: default
 
 <body>
 
+<!--    
 <h1>Create a Flex Container</h1>
+-->
 
 <!--
 <div class="flex-container">
@@ -48,8 +50,8 @@ layout: default
     </div>
 <!--<div style="flex-grow: 10">  -->
     <div class="col-md-8 bg-info">
-        <h1 class="font-weight-bold mb-2 serif-font">Welcome</h1>
-        <p class="lead mb-2">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on advanced analytics and AI solutions.  I specialize in the Healthcare & Life Sciences industry, using technology to improve healthcare delivery.</p>
+        <h1 class="font-weight-bold mt-2 mb-2 serif-font">Welcome</h1>
+        <p class="lead mb-4">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on advanced analytics and AI solutions.  I specialize in the Healthcare & Life Sciences industry, using technology to improve healthcare delivery.</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
     </div>
     </div>
