--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ layout: default
         </div>
     </div>
 <!--<div style="flex-grow: 10">  -->
-    <div class="col-md-8 bg-info">
-        <h1 class="font-weight-bold mt-2 mb-2 serif-font">Welcome</h1>
+    <div class="col-md-8 align-items-center bg-info">
+        <h1 class="font-weight-bold serif-font">Welcome</h1>
         <p class="lead mb-4">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on advanced analytics and AI solutions.  I specialize in the Healthcare & Life Sciences industry, using technology to improve healthcare delivery.</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
     </div>
