--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
 <!--
 <div class="flex-container">
 -->
-<div class="d-md-flex bg-primary height-350px p-5 h-100">
+<div class="d-md-flex bg-primary p-5 h-350">
 <!--<div class="col-md-1 bg-info"></div> -->
     <div class="col-md-4 bg-warning">
         <div class="cover-author-image">
