--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@ layout: default
 <!--
 <div class="flex-container">
 -->
-<div class="d-md-flex bg-primary p-5 h-1000">
+
+<!-- https://www.w3schools.com/bootstrap4/bootstrap_flex.asp -->
+<div class="d-md-flex bg-primary p-5" style="height:150px"> 
 <!--<div class="col-md-1 bg-info"></div> -->
     <div class="col-md-4 bg-warning">
         <div class="cover-author-image">
