--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ layout: default
 <!-- https://www.w3schools.com/bootstrap4/bootstrap_flex.asp -->
 <div class="d-md-flex bg-primary p-5" style="height:500px"> 
 <!--<div class="col-md-1 bg-info"></div> -->
-    <div class="col-md-4 align-items-center bg-warning">
+    <div class="col-md-4 justify-content-center bg-warning">
         <div class="cover-author-image">
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
         </div>
     </div>
 <!--<div style="flex-grow: 10">  -->
-    <div class="col-md-8 align-items-center bg-info">
+    <div class="col-md-8 justify-content-center bg-info">
         <h1 class="mt-3 font-weight-bold serif-font">Welcome</h1>
         <p class="lead mb-3">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve healthcare delivery.</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
