--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ layout: default
 <!--<div style="flex-grow: 10">  -->
     <div class="col-md-8 justify-content-center bg-info">
         <h1 class="mt-3 font-weight-bold serif-font">Welcome</h1>
-        <p class="lead mb-3">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve healthcare delivery.</p>
+        <p class="lead mb-3">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions - ideation, design, and delivery.  I am passionate about improving healthcare delivery through technology.</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
     </div>
     </div>
