--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ layout: default
 <div class="d-md-flex bg-primary p-5" style="height:500px"> 
 <!--<div class="col-md-1 bg-info"></div> -->
     <div class="col-md-4 bg-warning">
-        <div class="justify-content-center cover-author-image">
+        <div class="align-items-center cover-author-image">
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
         </div>
     </div>
 <!--<div style="flex-grow: 10">  -->
     <div class="col-md-8 bg-info">
-        <h1 class="mt-3 justify-content-center font-weight-bold serif-font">Welcome</h1>
+        <h1 class="mt-3 align-items-center font-weight-bold serif-font">Welcome</h1>
         <p class="lead mb-3">Hi, I'm Sandy.  I am a data strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve healthcare delivery and patient outcomes.</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
     </div>
