--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ layout: default
 -->
 
 <!-- https://www.w3schools.com/bootstrap4/bootstrap_flex.asp -->
-<div class="d-md-flex bg-primary p-5" style="height:500px"> 
+<div class="d-md-flex bg-primary p-5 align-items-center justify-content-center" style="height:500px"> 
 <!--<div class="col-md-1 bg-info"></div> -->
-    <div class="col-md-4 bg-warning align-items-center justify-content-center">
+    <div class="col-md-4 bg-warning">
         <div class="cover-author-image">
             <img class="img-responsive" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
         </div>
