--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
         </div>
     </div>
 <!--<div style="flex-grow: 10">  -->
-    <div class="col-md-8 bg-info p-5">
+    <div class="col-md-8 bg-info align-items-center">
         <h1 class="mt-3 font-weight-bold serif-font">Welcome</h1>
         <p class="lead mb-3">Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
         <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
