--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ layout: default
 </style>
 </head>
 
+<body>
+
 <div id="container"><!-- flex container -->
 
     <div class="box" id="bluebox"><!-- flex item -->
@@ -34,3 +36,5 @@ layout: default
     </div>
 
 </div>
+
+</body>
