--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ layout: default
     text-align: center;
 }
 
-bluebox { background: aqua; }
-redbox { background: red; }
+#bluebox { background: aqua; }
+#redbox { background: red; }
 
 </style>
 </head>
