--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 title: Home
-
+layout: default
 ---
 
 <!-- Home Intro
 ================================================== -->
 <style>
 
-#container {
+.container_test {
     display: flex; /* establish flex container */
     flex-direction: column; /* make main-axis vertical */
     justify-content: center; /* align items vertically, in this case */
@@ -30,7 +30,7 @@ title: Home
 
 <body>
 
-<div id="container"><!-- flex container -->
+<div id="container_test"><!-- flex container -->
 
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
