--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 
 <div id="container_test"><!-- flex container -->
 
-    <div class="box" id="bluebox"><!-- flex item -->
+    <div class="bo" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
 
