--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ layout: default
     width: 300px;
     margin: 5px;
     text-align: center;
+    justify-content: center;
 }
 
 #bluebox { background: aqua; }
