--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
     width: 300px;
     margin: 5px;
     text-align: center;
-    padding-top: 5;
+    padding-top: 5px;
 }
 
 #bluebox { background: aqua; }
