--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ layout: default
     width: 300px;
     margin: 5px;
     text-align: center;
+    justify-content: center; /* align items vertically, in this case */
+    align-items: center; /* align items horizontally, in this case */
 }
 
 #bluebox { background: aqua; }
