--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
 
 </style>
 
-<body>
+<!-- <body> -->
 
 <div class="container_test">
     <div class="box" id="bluebox"><!-- flex item -->
@@ -39,4 +39,4 @@ layout: default
         <p>DIV #2</p>
     </div>
 </div>
-</body>
+<!-- </body>    -->
