--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 
 <!-- <body> -->
 <div class="container bg-info">
-<div class="container_test">
+<!-- <div class="container_test"> -->
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
@@ -38,6 +38,6 @@ layout: default
     <div class="box" id="redbox"><!-- flex item -->
         <p>DIV #2</p>
     </div>
-</div>
+<!-- </div> -->
 </div>
 <!-- </body>    -->
