--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ layout: default
 }
 
 .box {
+    display: flex; 
+    align-items: center;
     width: 300px;
     margin: 5px;
     text-align: center;
