--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ layout: default
 }
 
 .box {
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main-axis vertical */
+    justify-content: center; /* align items vertically, in this case */
     align-items: center; /* align items horizontally, in this case */
     width: 300px;
     margin: 5px;
