--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
     display: flex; /* establish flex container */
     flex-direction: column; /* make main-axis vertical */
     justify-content: center; /* align items vertically, in this case */
-    align-item: center; /* align items horizontally, in this case */
+    align-items: center; /* align items horizontally, in this case */
     width: 300px;
     margin: 5px;
     text-align: center;
