--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@ layout: default
 }
 
 .box {
-    display: flex;
     width: 300px;
     margin: 5px;
     text-align: center;
@@ -30,9 +29,9 @@ layout: default
 </style>
 
 <!-- <body> -->
-<div class="container bg-warning justify-content-center align-items-center">
+<div class="container bg-warning">
 <!-- <div class="container_test"> -->
-    <div class="box" id="bluebox"><!-- flex item -->
+    <div class="box justify-content-center align-items-center" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
 
