--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 </style>
 
 <!-- <body> -->
-<div class="container bg-warning">
+<div class="container bg-warning flex">
 <!-- <div class="container_test"> -->
     <div class="box justify-content-center align-items-center" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
