--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@ layout: default
 <!-- <body> -->
 <div class="container bg-info">
 <!-- <div class="container_test bg-info">  -->
+    <div class="box" id="blubox"><!-- flex item -->
+        <p>DIV #1</p>
+    </div>
+
+    <div class="box" id="redbox"><!-- flex item -->
+        <p>DIV #2</p>
+    </div>
 </div>
 <!-- </div> -->
 <!-- </body>    -->
