--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 .container_test {
     display: flex; /* establish flex container */
 /*    flex-direction: column; /* make main-axis vertical */
-    justify-content: center; /* align items vertically, in this case */
+/*    justify-content: center; /* align items vertically, in this case */
     align-items: center; /* align items horizontally, in this case */
     height: 300px; /* for demo purposes */
     border: 1px solid black; /* for demo purposes */
