--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@ layout: default
 
 .box {
     width: 300px;
-    margin: auto;
+    margin: 5px;
     text-align: center;
+    padding: 25px
 }
 
 #bluebox { background: aqua; }
