--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@ layout: default
 }
 
 .box {
-    display: inline;
     width: 300px;
     margin: 5px;
     text-align: center;
-    vertical-align: middle;
+    vertical-align: middl;
 }
 
 #bluebox { background: aqua; }
