--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
     width: 300px;
     margin: 5px;
     text-align: center;
-    vertical-align: middl;
+    vertical-align: middle;
 }
 
 #bluebox { background: aqua; }
