--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ layout: default
 
 <!-- <body> -->
 <!-- <div class="container bg-info">    -->
-<div class="flex bg-info">
-    <div class="box justify-content-center align-items-center" id="bluebox"><!-- flex item -->
+<div class="container_test">
+    <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
 
