--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ layout: default
     margin: 5px;
     text-align: center;
     vertical-align: middle;
+    justify-content: center; /* align items vertically, in this case */
 }
 
 #bluebox { background: aqua; }
